syntax = "proto2";

option java_package = "msg.userhandler";
option java_multiple_files = true;

package userhandler;

// stored user details parsed from JWT created on login and passed through each request 
message UserDetails{
	optional int32 user_id = 1;
	optional  Permissions user_permissions = 2;
}

// specify user permissions and roles 
message Permissions{

}

