syntax = "proto2";

option java_package = "msg.userhandler";
option java_multiple_files = true;

import "user/user.proto";


package userhandler;

// Handles all things user
service UserHandler {
  // Sends a greeting
  rpc login (LoginRequest) returns (LoginResponse) {}
  rpc getUserFromDetails(UserDetails) returns (User){}
}

message LoginRequest {
	oneof token{
		string google_token = 1;
		string facebook_token = 2;
	}
}

message LoginResponse{
}

